add UI for sign in screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MovieDBDemo</string>
+
+    <string name="title_login">Login</string>
+
+    <string name="login_username">Username</string>
+    <string name="login_pass">Password</string>
+    <string name="login_btn_text">Login</string>
 </resources>
