--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="login_btn_text">Login</string>
 
     <string name="error_title">Error</string>
+    <string name="main_header_text">Movie DB</string>
 </resources>
