add genres screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">MovieDBDemo</string>
 
     <string name="title_login">Login</string>
+    <string name="title_genres">Genres</string>
 
     <string name="login_username">Username</string>
     <string name="login_pass">Password</string>
@@ -9,4 +10,8 @@
 
     <string name="error_title">Error</string>
     <string name="main_header_text">Movie DB</string>
+
+    <string name="tv_fragment_genres">Genres</string>
+
+    <string name="drawer_item_genres">Movie Genres</string>
 </resources>
