add movies by genre screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="title_login">Login</string>
     <string name="title_genres">Genres</string>
+    <string name="title_movies_by_genre">Movies By Genre</string>
 
     <string name="login_username">Username</string>
     <string name="login_pass">Password</string>
