--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="title_DCA">Choose the action, please:</string>
     <string name="favorite_DCA">Mark as Favorite</string>
     <string name="watchlist_DCA">Add to Watchlist</string>
+    <string name="remove_favorite_DCA">Remove from Favorite</string>
 </resources>
