--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="watchlist_DCA">Add to Watchlist</string>
     <string name="remove_favorite_DCA">Remove from Favorite</string>
     <string name="remove_watchlist_DCA">Remove from Watchlist</string>
+    <string name="dialog_rating">Leave your rating, please</string>
 </resources>
