--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="title_list_details">List Details</string>
     <string name="title_favorite_movies">Favorite Movies</string>
     <string name="title_watchlist">Watchlist</string>
+    <string name="title_rated_movies">Rated Movies</string>
 
     <string name="login_username">Username</string>
     <string name="login_pass">Password</string>
@@ -23,6 +24,7 @@
     <string name="drawer_item_lists">Created Lists</string>
     <string name="drawer_item_favorite">Favorite Movies</string>
     <string name="drawer_item_watchlist">Movies Watchlist</string>
+    <string name="drawer_item_rated_movies">Rated Movies</string>
 
     <string name="button_ok">OK</string>
     <string name="button_cancel">Cancel</string>
