--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_favorite_movies">Favorite Movies</string>
     <string name="title_watchlist">Watchlist</string>
     <string name="title_rated_movies">Rated Movies</string>
+    <string name="title_details_movie">Details Movie</string>
 
     <string name="login_username">Username</string>
     <string name="login_pass">Password</string>
