--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,7 @@
     <string name="remove_favorite_DCA">Remove from Favorite</string>
     <string name="remove_watchlist_DCA">Remove from Watchlist</string>
     <string name="dialog_rating">Leave your rating, please</string>
+    <string name="genres_FDM">Genres:</string>
+    <string name="production_companies_FDM">Production Companies:</string>
+    <string name="production_countries_FDM">Production Countries:</string>
 </resources>
