added the possibility to view list of popular movies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="title_watchlist">Watchlist</string>
     <string name="title_rated_movies">Rated Movies</string>
     <string name="title_details_movie">Details Movie</string>
+    <string name="title_popular_movies">Popular Movies</string>
 
     <string name="login_username">Username</string>
     <string name="login_pass">Password</string>
@@ -26,6 +27,7 @@
     <string name="drawer_item_favorite">Favorite Movies</string>
     <string name="drawer_item_watchlist">Movies Watchlist</string>
     <string name="drawer_item_rated_movies">Rated Movies</string>
+    <string name="drawer_item_popular_movies">Popular Movies</string>
 
     <string name="button_ok">OK</string>
     <string name="button_cancel">Cancel</string>
