--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="title_rated_movies">Rated Movies</string>
     <string name="title_details_movie">Details Movie</string>
     <string name="title_popular_movies">Popular Movies</string>
+    <string name="title_popular_people">Popular People</string>
 
     <string name="login_username">Username</string>
     <string name="login_pass">Password</string>
@@ -28,6 +29,7 @@
     <string name="drawer_item_watchlist">Movies Watchlist</string>
     <string name="drawer_item_rated_movies">Rated Movies</string>
     <string name="drawer_item_popular_movies">Popular Movies</string>
+    <string name="drawer_item_popular_people">Popular People</string>
 
     <string name="button_ok">OK</string>
     <string name="button_cancel">Cancel</string>
@@ -54,7 +56,11 @@
     <string name="remove_favorite_DCA">Remove from Favorite</string>
     <string name="remove_watchlist_DCA">Remove from Watchlist</string>
     <string name="dialog_rating">Leave your rating, please</string>
+
     <string name="genres_FDM">Genres:</string>
     <string name="production_companies_FDM">Production Companies:</string>
     <string name="production_countries_FDM">Production Countries:</string>
+
+    <string name="popularity_IPP">Popularity:</string>
+    <string name="known_for_IPP">Known For</string>
 </resources>
