added the possibility to search actors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="title_details_movie">Details Movie</string>
     <string name="title_popular_movies">Popular Movies</string>
     <string name="title_popular_people">Popular People</string>
-    <string name="title_details_people">Details</string>
+    <string name="title_details_people">Person Details</string>
+    <string name="title_search_people">Search People</string>
 
     <string name="login_username">Username</string>
     <string name="login_pass">Password</string>
@@ -31,6 +32,7 @@
     <string name="drawer_item_rated_movies">Rated Movies</string>
     <string name="drawer_item_popular_movies">Popular Movies</string>
     <string name="drawer_item_popular_people">Popular People</string>
+    <string name="drawer_item_search_people">Search People</string>
 
     <string name="button_ok">OK</string>
     <string name="button_cancel">Cancel</string>
@@ -67,4 +69,5 @@
 
     <string name="known_as_FDP">Known as:\u0020</string>
     <string name="place_of_birth_FDP">Place of Birth:\u0020</string>
+    <string name="search_FSP">Search</string>
 </resources>
