--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title_popular_people">Popular People</string>
     <string name="title_details_people">Person Details</string>
     <string name="title_search_people">Search People</string>
+    <string name="title_search_movies">Search Movies</string>
 
     <string name="login_username">Username</string>
     <string name="login_pass">Password</string>
@@ -33,6 +34,7 @@
     <string name="drawer_item_popular_movies">Popular Movies</string>
     <string name="drawer_item_popular_people">Popular People</string>
     <string name="drawer_item_search_people">Search People</string>
+    <string name="drawer_item_search_movies">Search Movies</string>
 
     <string name="button_ok">OK</string>
     <string name="button_cancel">Cancel</string>
