--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="drawer_item_popular_people">Popular People</string>
     <string name="drawer_item_search_people">Search People</string>
     <string name="drawer_item_search_movies">Search Movies</string>
+    <string name="drawer_item_log_out">Log Out</string>
 
     <string name="button_ok">OK</string>
     <string name="button_cancel">Cancel</string>
